logic timer and change id name

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,13 +101,13 @@ hr {
   color: #ffffff;
 }
 
-#timer-study {
+#stopwatch-study {
   color: #1e293b;
   font-size: 100px;
   font-weight: 600;
 }
 
-#timer-rest {
+#stopwatch-rest {
   color: #1e293b;
   font-size: 40px;
   font-weight: 600;
